Create basic version of the OrderBook